--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-project",
+  "name": "react-ts-vite-linaria-template",
   "private": true,
   "version": "0.0.0",
   "type": "module",
