--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@linaria/core": "^4.2.4",
+    "@linaria/react":"^4.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@linaria/vite": "^4.2.4",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
     "typescript": "^4.6.4",
-    "vite": "^3.1.0",
-    "vite-plugin-linaria": "^1.0.0"
+    "vite": "^3.1.0"
   }
 }
